// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`WIPTableWithTheme Component Testing Should match the snapshot of <WIPTableWithTheme /> 1`] = `
<Fragment>
  <WIPTable__RowWrapper />
  <WIPTable__Container
    className="ag-theme-balham"
  >
    <AgGridReact
      animateRows={true}
      columnDefs={
        Array [
          Object {
            "cellEditorParams": Object {
              "isDisabled": false,
              "theme": Object {
                "action": Object {
                  "dark": Object {
                    "RGB": "0,47,108",
                    "hex": "#002F6C",
                    "on": "#FFFFFF",
                  },
                  "light": Object {
                    "RGB": "98,194,248",
                    "hex": "#62C2F8",
                    "on": "#FFFFFF",
                  },
                  "main": Object {
                    "RGB": "1,87,155",
                    "hex": "#01579B",
                    "on": "#FFFFFF",
                  },
                },
                "background": Object {
                  "RGB": "246,246,246",
                  "hex": "#F6F6F6",
                },
                "black": Object {
                  "main": Object {
                    "RGB": "39,39,39",
                    "hex": "#272727",
                    "on": "#FFFFFF",
                  },
                  "tint20": Object {
                    "RGB": "236,236,236",
                    "hex": "#ECECEC",
                    "on": "#272727",
                  },
                  "tint40": Object {
                    "RGB": "199,199,199",
                    "hex": "#C7C7C7",
                    "on": "#272727",
                  },
                  "tint60": Object {
                    "RGB": "160,160,160",
                    "hex": "#A0A0A0",
                    "on": "#FFFFFF",
                  },
                  "tint80": Object {
                    "RGB": "105,105,105",
                    "hex": "#696969",
                    "on": "#FFFFFF",
                  },
                },
                "complimentary": Object {
                  "dark": Object {
                    "RGB": "250,175,64",
                    "hex": "#FAAF40",
                    "on": "#272727",
                  },
                  "light": Object {
                    "RGB": "249,240,21",
                    "hex": "#F9F015",
                    "on": "#272727",
                  },
                  "main": Object {
                    "RGB": "253,216,53",
                    "hex": "#FDD835",
                    "on": "#272727",
                  },
                },
                "error": Object {
                  "dark": Object {
                    "RGB": "143,6,6",
                    "hex": "#8F0606",
                    "on": "#FFFFFF",
                  },
                  "main": Object {
                    "RGB": "220,16,16",
                    "hex": "#DC1010",
                    "on": "#FFFFFF",
                  },
                },
                "primary": Object {
                  "dark": Object {
                    "RGB": "11,102,54",
                    "hex": "#0B6636",
                    "on": "#FFFFFF",
                  },
                  "light": Object {
                    "RGB": "145,208,62",
                    "hex": "#91D03E",
                    "on": "#FFFFFF",
                  },
                  "main": Object {
                    "RGB": "1,145,68",
                    "hex": "#019144",
                    "on": "#FFFFFF",
                  },
                },
                "secondary": Object {
                  "dark": Object {
                    "RGB": "72,140,155",
                    "hex": "#488C9B",
                    "on": "#FFFFFF",
                  },
                  "light": Object {
                    "RGB": "162,235,252",
                    "hex": "#A2EBFC",
                    "on": "#272727",
                  },
                  "main": Object {
                    "RGB": "118,182,196",
                    "hex": "#76B6C4",
                    "on": "#FFFFFF",
                  },
                },
                "surface": Object {
                  "RGB": "255,255,255",
                  "hex": "#FFFFFF",
                  "on": "#272727",
                },
                "white": Object {
                  "RGB": "255,255,255",
                  "hex": "#FFFFFF",
                  "on": "#272727",
                },
              },
            },
            "cellRenderer": "defaultTextEditor",
            "cellRendererParams": Object {
              "isDisabled": false,
              "theme": Object {
                "action": Object {
                  "dark": Object {
                    "RGB": "0,47,108",
                    "hex": "#002F6C",
                    "on": "#FFFFFF",
                  },
                  "light": Object {
                    "RGB": "98,194,248",
                    "hex": "#62C2F8",
                    "on": "#FFFFFF",
                  },
                  "main": Object {
                    "RGB": "1,87,155",
                    "hex": "#01579B",
                    "on": "#FFFFFF",
                  },
                },
                "background": Object {
                  "RGB": "246,246,246",
                  "hex": "#F6F6F6",
                },
                "black": Object {
                  "main": Object {
                    "RGB": "39,39,39",
                    "hex": "#272727",
                    "on": "#FFFFFF",
                  },
                  "tint20": Object {
                    "RGB": "236,236,236",
                    "hex": "#ECECEC",
                    "on": "#272727",
                  },
                  "tint40": Object {
                    "RGB": "199,199,199",
                    "hex": "#C7C7C7",
                    "on": "#272727",
                  },
                  "tint60": Object {
                    "RGB": "160,160,160",
                    "hex": "#A0A0A0",
                    "on": "#FFFFFF",
                  },
                  "tint80": Object {
                    "RGB": "105,105,105",
                    "hex": "#696969",
                    "on": "#FFFFFF",
                  },
                },
                "complimentary": Object {
                  "dark": Object {
                    "RGB": "250,175,64",
                    "hex": "#FAAF40",
                    "on": "#272727",
                  },
                  "light": Object {
                    "RGB": "249,240,21",
                    "hex": "#F9F015",
                    "on": "#272727",
                  },
                  "main": Object {
                    "RGB": "253,216,53",
                    "hex": "#FDD835",
                    "on": "#272727",
                  },
                },
                "error": Object {
                  "dark": Object {
                    "RGB": "143,6,6",
                    "hex": "#8F0606",
                    "on": "#FFFFFF",
                  },
                  "main": Object {
                    "RGB": "220,16,16",
                    "hex": "#DC1010",
                    "on": "#FFFFFF",
                  },
                },
                "primary": Object {
                  "dark": Object {
                    "RGB": "11,102,54",
                    "hex": "#0B6636",
                    "on": "#FFFFFF",
                  },
                  "light": Object {
                    "RGB": "145,208,62",
                    "hex": "#91D03E",
                    "on": "#FFFFFF",
                  },
                  "main": Object {
                    "RGB": "1,145,68",
                    "hex": "#019144",
                    "on": "#FFFFFF",
                  },
                },
                "secondary": Object {
                  "dark": Object {
                    "RGB": "72,140,155",
                    "hex": "#488C9B",
                    "on": "#FFFFFF",
                  },
                  "light": Object {
                    "RGB": "162,235,252",
                    "hex": "#A2EBFC",
                    "on": "#272727",
                  },
                  "main": Object {
                    "RGB": "118,182,196",
                    "hex": "#76B6C4",
                    "on": "#FFFFFF",
                  },
                },
                "surface": Object {
                  "RGB": "255,255,255",
                  "hex": "#FFFFFF",
                  "on": "#272727",
                },
                "white": Object {
                  "RGB": "255,255,255",
                  "hex": "#FFFFFF",
                  "on": "#272727",
                },
              },
            },
            "checkboxSelection": true,
            "editable": true,
            "field": "firstName",
            "filter": true,
            "headerCheckboxSelection": true,
            "headerCheckboxSelectionFilteredOnly": true,
            "headerName": "First Name",
            "sortable": true,
          },
          Object {
            "cellEditorParams": Object {
              "isDisabled": false,
              "theme": Object {
                "action": Object {
                  "dark": Object {
                    "RGB": "0,47,108",
                    "hex": "#002F6C",
                    "on": "#FFFFFF",
                  },
                  "light": Object {
                    "RGB": "98,194,248",
                    "hex": "#62C2F8",
                    "on": "#FFFFFF",
                  },
                  "main": Object {
                    "RGB": "1,87,155",
                    "hex": "#01579B",
                    "on": "#FFFFFF",
                  },
                },
                "background": Object {
                  "RGB": "246,246,246",
                  "hex": "#F6F6F6",
                },
                "black": Object {
                  "main": Object {
                    "RGB": "39,39,39",
                    "hex": "#272727",
                    "on": "#FFFFFF",
                  },
                  "tint20": Object {
                    "RGB": "236,236,236",
                    "hex": "#ECECEC",
                    "on": "#272727",
                  },
                  "tint40": Object {
                    "RGB": "199,199,199",
                    "hex": "#C7C7C7",
                    "on": "#272727",
                  },
                  "tint60": Object {
                    "RGB": "160,160,160",
                    "hex": "#A0A0A0",
                    "on": "#FFFFFF",
                  },
                  "tint80": Object {
                    "RGB": "105,105,105",
                    "hex": "#696969",
                    "on": "#FFFFFF",
                  },
                },
                "complimentary": Object {
                  "dark": Object {
                    "RGB": "250,175,64",
                    "hex": "#FAAF40",
                    "on": "#272727",
                  },
                  "light": Object {
                    "RGB": "249,240,21",
                    "hex": "#F9F015",
                    "on": "#272727",
                  },
                  "main": Object {
                    "RGB": "253,216,53",
                    "hex": "#FDD835",
                    "on": "#272727",
                  },
                },
                "error": Object {
                  "dark": Object {
                    "RGB": "143,6,6",
                    "hex": "#8F0606",
                    "on": "#FFFFFF",
                  },
                  "main": Object {
                    "RGB": "220,16,16",
                    "hex": "#DC1010",
                    "on": "#FFFFFF",
                  },
                },
                "primary": Object {
                  "dark": Object {
                    "RGB": "11,102,54",
                    "hex": "#0B6636",
                    "on": "#FFFFFF",
                  },
                  "light": Object {
                    "RGB": "145,208,62",
                    "hex": "#91D03E",
                    "on": "#FFFFFF",
                  },
                  "main": Object {
                    "RGB": "1,145,68",
                    "hex": "#019144",
                    "on": "#FFFFFF",
                  },
                },
                "secondary": Object {
                  "dark": Object {
                    "RGB": "72,140,155",
                    "hex": "#488C9B",
                    "on": "#FFFFFF",
                  },
                  "light": Object {
                    "RGB": "162,235,252",
                    "hex": "#A2EBFC",
                    "on": "#272727",
                  },
                  "main": Object {
                    "RGB": "118,182,196",
                    "hex": "#76B6C4",
                    "on": "#FFFFFF",
                  },
                },
                "surface": Object {
                  "RGB": "255,255,255",
                  "hex": "#FFFFFF",
                  "on": "#272727",
                },
                "white": Object {
                  "RGB": "255,255,255",
                  "hex": "#FFFFFF",
                  "on": "#272727",
                },
              },
            },
            "cellRenderer": "defaultTextEditor",
            "cellRendererParams": Object {
              "isDisabled": false,
              "theme": Object {
                "action": Object {
                  "dark": Object {
                    "RGB": "0,47,108",
                    "hex": "#002F6C",
                    "on": "#FFFFFF",
                  },
                  "light": Object {
                    "RGB": "98,194,248",
                    "hex": "#62C2F8",
                    "on": "#FFFFFF",
                  },
                  "main": Object {
                    "RGB": "1,87,155",
                    "hex": "#01579B",
                    "on": "#FFFFFF",
                  },
                },
                "background": Object {
                  "RGB": "246,246,246",
                  "hex": "#F6F6F6",
                },
                "black": Object {
                  "main": Object {
                    "RGB": "39,39,39",
                    "hex": "#272727",
                    "on": "#FFFFFF",
                  },
                  "tint20": Object {
                    "RGB": "236,236,236",
                    "hex": "#ECECEC",
                    "on": "#272727",
                  },
                  "tint40": Object {
                    "RGB": "199,199,199",
                    "hex": "#C7C7C7",
                    "on": "#272727",
                  },
                  "tint60": Object {
                    "RGB": "160,160,160",
                    "hex": "#A0A0A0",
                    "on": "#FFFFFF",
                  },
                  "tint80": Object {
                    "RGB": "105,105,105",
                    "hex": "#696969",
                    "on": "#FFFFFF",
                  },
                },
                "complimentary": Object {
                  "dark": Object {
                    "RGB": "250,175,64",
                    "hex": "#FAAF40",
                    "on": "#272727",
                  },
                  "light": Object {
                    "RGB": "249,240,21",
                    "hex": "#F9F015",
                    "on": "#272727",
                  },
                  "main": Object {
                    "RGB": "253,216,53",
                    "hex": "#FDD835",
                    "on": "#272727",
                  },
                },
                "error": Object {
                  "dark": Object {
                    "RGB": "143,6,6",
                    "hex": "#8F0606",
                    "on": "#FFFFFF",
                  },
                  "main": Object {
                    "RGB": "220,16,16",
                    "hex": "#DC1010",
                    "on": "#FFFFFF",
                  },
                },
                "primary": Object {
                  "dark": Object {
                    "RGB": "11,102,54",
                    "hex": "#0B6636",
                    "on": "#FFFFFF",
                  },
                  "light": Object {
                    "RGB": "145,208,62",
                    "hex": "#91D03E",
                    "on": "#FFFFFF",
                  },
                  "main": Object {
                    "RGB": "1,145,68",
                    "hex": "#019144",
                    "on": "#FFFFFF",
                  },
                },
                "secondary": Object {
                  "dark": Object {
                    "RGB": "72,140,155",
                    "hex": "#488C9B",
                    "on": "#FFFFFF",
                  },
                  "light": Object {
                    "RGB": "162,235,252",
                    "hex": "#A2EBFC",
                    "on": "#272727",
                  },
                  "main": Object {
                    "RGB": "118,182,196",
                    "hex": "#76B6C4",
                    "on": "#FFFFFF",
                  },
                },
                "surface": Object {
                  "RGB": "255,255,255",
                  "hex": "#FFFFFF",
                  "on": "#272727",
                },
                "white": Object {
                  "RGB": "255,255,255",
                  "hex": "#FFFFFF",
                  "on": "#272727",
                },
              },
            },
            "editable": true,
            "field": "lastName",
            "filter": true,
            "headerName": "Last Name",
            "sortable": true,
          },
        ]
      }
      columns={
        Array [
          Object {
            "checkboxSelection": true,
            "field": "firstName",
            "filter": true,
            "headerCheckboxSelection": true,
            "headerCheckboxSelectionFilteredOnly": true,
            "headerName": "First Name",
            "sortable": true,
          },
          Object {
            "field": "lastName",
            "filter": true,
            "headerName": "Last Name",
            "sortable": true,
          },
        ]
      }
      displayAddNewButton={false}
      displayDeleteButton={false}
      frameworkComponents={
        Object {
          "actionCellRenderer": [Function],
          "checkboxRenderer": [Function],
          "defaultTextEditor": [Function],
          "selectRenderer": [Function],
          "toggleRenderer": [Function],
          "tooltipHeader": [Function],
        }
      }
      gridOptions={
        Object {
          "getRowStyle": [Function],
        }
      }
      isDisabled={false}
      onGridReady={[Function]}
      onRowDragEnd={[Function]}
      onRowSelected={[Function]}
      rowData={
        Array [
          Object {
            "firstName": "Teddy",
            "key": 1,
            "lastName": "Bear",
          },
          Object {
            "firstName": "Arctic",
            "key": 3,
            "lastName": "Monkeys",
          },
          Object {
            "firstName": "Poney Poney",
            "key": 5,
            "lastName": "Run Run",
          },
          Object {
            "firstName": "Baby",
            "key": 2,
            "lastName": "Shark",
          },
        ]
      }
      rowDragManaged={true}
      rowHeight={40}
      rowSelection="multiple"
      rows={
        Array [
          Object {
            "firstName": "Teddy",
            "key": 1,
            "lastName": "Bear",
          },
          Object {
            "firstName": "Arctic",
            "key": 3,
            "lastName": "Monkeys",
          },
          Object {
            "firstName": "Poney Poney",
            "key": 5,
            "lastName": "Run Run",
          },
          Object {
            "firstName": "Baby",
            "key": 2,
            "lastName": "Shark",
          },
        ]
      }
      suppressDragLeaveHidesColumns={true}
      theme={
        Object {
          "action": Object {
            "dark": Object {
              "RGB": "0,47,108",
              "hex": "#002F6C",
              "on": "#FFFFFF",
            },
            "light": Object {
              "RGB": "98,194,248",
              "hex": "#62C2F8",
              "on": "#FFFFFF",
            },
            "main": Object {
              "RGB": "1,87,155",
              "hex": "#01579B",
              "on": "#FFFFFF",
            },
          },
          "background": Object {
            "RGB": "246,246,246",
            "hex": "#F6F6F6",
          },
          "black": Object {
            "main": Object {
              "RGB": "39,39,39",
              "hex": "#272727",
              "on": "#FFFFFF",
            },
            "tint20": Object {
              "RGB": "236,236,236",
              "hex": "#ECECEC",
              "on": "#272727",
            },
            "tint40": Object {
              "RGB": "199,199,199",
              "hex": "#C7C7C7",
              "on": "#272727",
            },
            "tint60": Object {
              "RGB": "160,160,160",
              "hex": "#A0A0A0",
              "on": "#FFFFFF",
            },
            "tint80": Object {
              "RGB": "105,105,105",
              "hex": "#696969",
              "on": "#FFFFFF",
            },
          },
          "complimentary": Object {
            "dark": Object {
              "RGB": "250,175,64",
              "hex": "#FAAF40",
              "on": "#272727",
            },
            "light": Object {
              "RGB": "249,240,21",
              "hex": "#F9F015",
              "on": "#272727",
            },
            "main": Object {
              "RGB": "253,216,53",
              "hex": "#FDD835",
              "on": "#272727",
            },
          },
          "error": Object {
            "dark": Object {
              "RGB": "143,6,6",
              "hex": "#8F0606",
              "on": "#FFFFFF",
            },
            "main": Object {
              "RGB": "220,16,16",
              "hex": "#DC1010",
              "on": "#FFFFFF",
            },
          },
          "primary": Object {
            "dark": Object {
              "RGB": "11,102,54",
              "hex": "#0B6636",
              "on": "#FFFFFF",
            },
            "light": Object {
              "RGB": "145,208,62",
              "hex": "#91D03E",
              "on": "#FFFFFF",
            },
            "main": Object {
              "RGB": "1,145,68",
              "hex": "#019144",
              "on": "#FFFFFF",
            },
          },
          "secondary": Object {
            "dark": Object {
              "RGB": "72,140,155",
              "hex": "#488C9B",
              "on": "#FFFFFF",
            },
            "light": Object {
              "RGB": "162,235,252",
              "hex": "#A2EBFC",
              "on": "#272727",
            },
            "main": Object {
              "RGB": "118,182,196",
              "hex": "#76B6C4",
              "on": "#FFFFFF",
            },
          },
          "surface": Object {
            "RGB": "255,255,255",
            "hex": "#FFFFFF",
            "on": "#272727",
          },
          "white": Object {
            "RGB": "255,255,255",
            "hex": "#FFFFFF",
            "on": "#272727",
          },
        }
      }
    />
    <Overlay
      isDisabled={false}
      theme={
        Object {
          "action": Object {
            "dark": Object {
              "RGB": "0,47,108",
              "hex": "#002F6C",
              "on": "#FFFFFF",
            },
            "light": Object {
              "RGB": "98,194,248",
              "hex": "#62C2F8",
              "on": "#FFFFFF",
            },
            "main": Object {
              "RGB": "1,87,155",
              "hex": "#01579B",
              "on": "#FFFFFF",
            },
          },
          "background": Object {
            "RGB": "246,246,246",
            "hex": "#F6F6F6",
          },
          "black": Object {
            "main": Object {
              "RGB": "39,39,39",
              "hex": "#272727",
              "on": "#FFFFFF",
            },
            "tint20": Object {
              "RGB": "236,236,236",
              "hex": "#ECECEC",
              "on": "#272727",
            },
            "tint40": Object {
              "RGB": "199,199,199",
              "hex": "#C7C7C7",
              "on": "#272727",
            },
            "tint60": Object {
              "RGB": "160,160,160",
              "hex": "#A0A0A0",
              "on": "#FFFFFF",
            },
            "tint80": Object {
              "RGB": "105,105,105",
              "hex": "#696969",
              "on": "#FFFFFF",
            },
          },
          "complimentary": Object {
            "dark": Object {
              "RGB": "250,175,64",
              "hex": "#FAAF40",
              "on": "#272727",
            },
            "light": Object {
              "RGB": "249,240,21",
              "hex": "#F9F015",
              "on": "#272727",
            },
            "main": Object {
              "RGB": "253,216,53",
              "hex": "#FDD835",
              "on": "#272727",
            },
          },
          "error": Object {
            "dark": Object {
              "RGB": "143,6,6",
              "hex": "#8F0606",
              "on": "#FFFFFF",
            },
            "main": Object {
              "RGB": "220,16,16",
              "hex": "#DC1010",
              "on": "#FFFFFF",
            },
          },
          "primary": Object {
            "dark": Object {
              "RGB": "11,102,54",
              "hex": "#0B6636",
              "on": "#FFFFFF",
            },
            "light": Object {
              "RGB": "145,208,62",
              "hex": "#91D03E",
              "on": "#FFFFFF",
            },
            "main": Object {
              "RGB": "1,145,68",
              "hex": "#019144",
              "on": "#FFFFFF",
            },
          },
          "secondary": Object {
            "dark": Object {
              "RGB": "72,140,155",
              "hex": "#488C9B",
              "on": "#FFFFFF",
            },
            "light": Object {
              "RGB": "162,235,252",
              "hex": "#A2EBFC",
              "on": "#272727",
            },
            "main": Object {
              "RGB": "118,182,196",
              "hex": "#76B6C4",
              "on": "#FFFFFF",
            },
          },
          "surface": Object {
            "RGB": "255,255,255",
            "hex": "#FFFFFF",
            "on": "#272727",
          },
          "white": Object {
            "RGB": "255,255,255",
            "hex": "#FFFFFF",
            "on": "#272727",
          },
        }
      }
    />
  </WIPTable__Container>
</Fragment>
`;

exports[`WIPTableWithTheme Component Testing highlights rows if specified 1`] = `
<Fragment>
  <WIPTable__RowWrapper />
  <WIPTable__Container
    className="ag-theme-balham"
  >
    <AgGridReact
      animateRows={true}
      columnDefs={
        Array [
          Object {
            "cellEditorParams": Object {
              "isDisabled": false,
              "theme": Object {
                "action": Object {
                  "dark": Object {
                    "RGB": "0,47,108",
                    "hex": "#002F6C",
                    "on": "#FFFFFF",
                  },
                  "light": Object {
                    "RGB": "98,194,248",
                    "hex": "#62C2F8",
                    "on": "#FFFFFF",
                  },
                  "main": Object {
                    "RGB": "1,87,155",
                    "hex": "#01579B",
                    "on": "#FFFFFF",
                  },
                },
                "background": Object {
                  "RGB": "246,246,246",
                  "hex": "#F6F6F6",
                },
                "black": Object {
                  "main": Object {
                    "RGB": "39,39,39",
                    "hex": "#272727",
                    "on": "#FFFFFF",
                  },
                  "tint20": Object {
                    "RGB": "236,236,236",
                    "hex": "#ECECEC",
                    "on": "#272727",
                  },
                  "tint40": Object {
                    "RGB": "199,199,199",
                    "hex": "#C7C7C7",
                    "on": "#272727",
                  },
                  "tint60": Object {
                    "RGB": "160,160,160",
                    "hex": "#A0A0A0",
                    "on": "#FFFFFF",
                  },
                  "tint80": Object {
                    "RGB": "105,105,105",
                    "hex": "#696969",
                    "on": "#FFFFFF",
                  },
                },
                "complimentary": Object {
                  "dark": Object {
                    "RGB": "250,175,64",
                    "hex": "#FAAF40",
                    "on": "#272727",
                  },
                  "light": Object {
                    "RGB": "249,240,21",
                    "hex": "#F9F015",
                    "on": "#272727",
                  },
                  "main": Object {
                    "RGB": "253,216,53",
                    "hex": "#FDD835",
                    "on": "#272727",
                  },
                },
                "error": Object {
                  "dark": Object {
                    "RGB": "143,6,6",
                    "hex": "#8F0606",
                    "on": "#FFFFFF",
                  },
                  "main": Object {
                    "RGB": "220,16,16",
                    "hex": "#DC1010",
                    "on": "#FFFFFF",
                  },
                },
                "primary": Object {
                  "dark": Object {
                    "RGB": "11,102,54",
                    "hex": "#0B6636",
                    "on": "#FFFFFF",
                  },
                  "light": Object {
                    "RGB": "145,208,62",
                    "hex": "#91D03E",
                    "on": "#FFFFFF",
                  },
                  "main": Object {
                    "RGB": "1,145,68",
                    "hex": "#019144",
                    "on": "#FFFFFF",
                  },
                },
                "secondary": Object {
                  "dark": Object {
                    "RGB": "72,140,155",
                    "hex": "#488C9B",
                    "on": "#FFFFFF",
                  },
                  "light": Object {
                    "RGB": "162,235,252",
                    "hex": "#A2EBFC",
                    "on": "#272727",
                  },
                  "main": Object {
                    "RGB": "118,182,196",
                    "hex": "#76B6C4",
                    "on": "#FFFFFF",
                  },
                },
                "surface": Object {
                  "RGB": "255,255,255",
                  "hex": "#FFFFFF",
                  "on": "#272727",
                },
                "white": Object {
                  "RGB": "255,255,255",
                  "hex": "#FFFFFF",
                  "on": "#272727",
                },
              },
            },
            "cellRenderer": "defaultTextEditor",
            "cellRendererParams": Object {
              "isDisabled": false,
              "theme": Object {
                "action": Object {
                  "dark": Object {
                    "RGB": "0,47,108",
                    "hex": "#002F6C",
                    "on": "#FFFFFF",
                  },
                  "light": Object {
                    "RGB": "98,194,248",
                    "hex": "#62C2F8",
                    "on": "#FFFFFF",
                  },
                  "main": Object {
                    "RGB": "1,87,155",
                    "hex": "#01579B",
                    "on": "#FFFFFF",
                  },
                },
                "background": Object {
                  "RGB": "246,246,246",
                  "hex": "#F6F6F6",
                },
                "black": Object {
                  "main": Object {
                    "RGB": "39,39,39",
                    "hex": "#272727",
                    "on": "#FFFFFF",
                  },
                  "tint20": Object {
                    "RGB": "236,236,236",
                    "hex": "#ECECEC",
                    "on": "#272727",
                  },
                  "tint40": Object {
                    "RGB": "199,199,199",
                    "hex": "#C7C7C7",
                    "on": "#272727",
                  },
                  "tint60": Object {
                    "RGB": "160,160,160",
                    "hex": "#A0A0A0",
                    "on": "#FFFFFF",
                  },
                  "tint80": Object {
                    "RGB": "105,105,105",
                    "hex": "#696969",
                    "on": "#FFFFFF",
                  },
                },
                "complimentary": Object {
                  "dark": Object {
                    "RGB": "250,175,64",
                    "hex": "#FAAF40",
                    "on": "#272727",
                  },
                  "light": Object {
                    "RGB": "249,240,21",
                    "hex": "#F9F015",
                    "on": "#272727",
                  },
                  "main": Object {
                    "RGB": "253,216,53",
                    "hex": "#FDD835",
                    "on": "#272727",
                  },
                },
                "error": Object {
                  "dark": Object {
                    "RGB": "143,6,6",
                    "hex": "#8F0606",
                    "on": "#FFFFFF",
                  },
                  "main": Object {
                    "RGB": "220,16,16",
                    "hex": "#DC1010",
                    "on": "#FFFFFF",
                  },
                },
                "primary": Object {
                  "dark": Object {
                    "RGB": "11,102,54",
                    "hex": "#0B6636",
                    "on": "#FFFFFF",
                  },
                  "light": Object {
                    "RGB": "145,208,62",
                    "hex": "#91D03E",
                    "on": "#FFFFFF",
                  },
                  "main": Object {
                    "RGB": "1,145,68",
                    "hex": "#019144",
                    "on": "#FFFFFF",
                  },
                },
                "secondary": Object {
                  "dark": Object {
                    "RGB": "72,140,155",
                    "hex": "#488C9B",
                    "on": "#FFFFFF",
                  },
                  "light": Object {
                    "RGB": "162,235,252",
                    "hex": "#A2EBFC",
                    "on": "#272727",
                  },
                  "main": Object {
                    "RGB": "118,182,196",
                    "hex": "#76B6C4",
                    "on": "#FFFFFF",
                  },
                },
                "surface": Object {
                  "RGB": "255,255,255",
                  "hex": "#FFFFFF",
                  "on": "#272727",
                },
                "white": Object {
                  "RGB": "255,255,255",
                  "hex": "#FFFFFF",
                  "on": "#272727",
                },
              },
            },
            "checkboxSelection": true,
            "editable": true,
            "field": "firstName",
            "filter": true,
            "headerCheckboxSelection": true,
            "headerCheckboxSelectionFilteredOnly": true,
            "headerName": "First Name",
            "sortable": true,
          },
          Object {
            "cellEditorParams": Object {
              "isDisabled": false,
              "theme": Object {
                "action": Object {
                  "dark": Object {
                    "RGB": "0,47,108",
                    "hex": "#002F6C",
                    "on": "#FFFFFF",
                  },
                  "light": Object {
                    "RGB": "98,194,248",
                    "hex": "#62C2F8",
                    "on": "#FFFFFF",
                  },
                  "main": Object {
                    "RGB": "1,87,155",
                    "hex": "#01579B",
                    "on": "#FFFFFF",
                  },
                },
                "background": Object {
                  "RGB": "246,246,246",
                  "hex": "#F6F6F6",
                },
                "black": Object {
                  "main": Object {
                    "RGB": "39,39,39",
                    "hex": "#272727",
                    "on": "#FFFFFF",
                  },
                  "tint20": Object {
                    "RGB": "236,236,236",
                    "hex": "#ECECEC",
                    "on": "#272727",
                  },
                  "tint40": Object {
                    "RGB": "199,199,199",
                    "hex": "#C7C7C7",
                    "on": "#272727",
                  },
                  "tint60": Object {
                    "RGB": "160,160,160",
                    "hex": "#A0A0A0",
                    "on": "#FFFFFF",
                  },
                  "tint80": Object {
                    "RGB": "105,105,105",
                    "hex": "#696969",
                    "on": "#FFFFFF",
                  },
                },
                "complimentary": Object {
                  "dark": Object {
                    "RGB": "250,175,64",
                    "hex": "#FAAF40",
                    "on": "#272727",
                  },
                  "light": Object {
                    "RGB": "249,240,21",
                    "hex": "#F9F015",
                    "on": "#272727",
                  },
                  "main": Object {
                    "RGB": "253,216,53",
                    "hex": "#FDD835",
                    "on": "#272727",
                  },
                },
                "error": Object {
                  "dark": Object {
                    "RGB": "143,6,6",
                    "hex": "#8F0606",
                    "on": "#FFFFFF",
                  },
                  "main": Object {
                    "RGB": "220,16,16",
                    "hex": "#DC1010",
                    "on": "#FFFFFF",
                  },
                },
                "primary": Object {
                  "dark": Object {
                    "RGB": "11,102,54",
                    "hex": "#0B6636",
                    "on": "#FFFFFF",
                  },
                  "light": Object {
                    "RGB": "145,208,62",
                    "hex": "#91D03E",
                    "on": "#FFFFFF",
                  },
                  "main": Object {
                    "RGB": "1,145,68",
                    "hex": "#019144",
                    "on": "#FFFFFF",
                  },
                },
                "secondary": Object {
                  "dark": Object {
                    "RGB": "72,140,155",
                    "hex": "#488C9B",
                    "on": "#FFFFFF",
                  },
                  "light": Object {
                    "RGB": "162,235,252",
                    "hex": "#A2EBFC",
                    "on": "#272727",
                  },
                  "main": Object {
                    "RGB": "118,182,196",
                    "hex": "#76B6C4",
                    "on": "#FFFFFF",
                  },
                },
                "surface": Object {
                  "RGB": "255,255,255",
                  "hex": "#FFFFFF",
                  "on": "#272727",
                },
                "white": Object {
                  "RGB": "255,255,255",
                  "hex": "#FFFFFF",
                  "on": "#272727",
                },
              },
            },
            "cellRenderer": "defaultTextEditor",
            "cellRendererParams": Object {
              "isDisabled": false,
              "theme": Object {
                "action": Object {
                  "dark": Object {
                    "RGB": "0,47,108",
                    "hex": "#002F6C",
                    "on": "#FFFFFF",
                  },
                  "light": Object {
                    "RGB": "98,194,248",
                    "hex": "#62C2F8",
                    "on": "#FFFFFF",
                  },
                  "main": Object {
                    "RGB": "1,87,155",
                    "hex": "#01579B",
                    "on": "#FFFFFF",
                  },
                },
                "background": Object {
                  "RGB": "246,246,246",
                  "hex": "#F6F6F6",
                },
                "black": Object {
                  "main": Object {
                    "RGB": "39,39,39",
                    "hex": "#272727",
                    "on": "#FFFFFF",
                  },
                  "tint20": Object {
                    "RGB": "236,236,236",
                    "hex": "#ECECEC",
                    "on": "#272727",
                  },
                  "tint40": Object {
                    "RGB": "199,199,199",
                    "hex": "#C7C7C7",
                    "on": "#272727",
                  },
                  "tint60": Object {
                    "RGB": "160,160,160",
                    "hex": "#A0A0A0",
                    "on": "#FFFFFF",
                  },
                  "tint80": Object {
                    "RGB": "105,105,105",
                    "hex": "#696969",
                    "on": "#FFFFFF",
                  },
                },
                "complimentary": Object {
                  "dark": Object {
                    "RGB": "250,175,64",
                    "hex": "#FAAF40",
                    "on": "#272727",
                  },
                  "light": Object {
                    "RGB": "249,240,21",
                    "hex": "#F9F015",
                    "on": "#272727",
                  },
                  "main": Object {
                    "RGB": "253,216,53",
                    "hex": "#FDD835",
                    "on": "#272727",
                  },
                },
                "error": Object {
                  "dark": Object {
                    "RGB": "143,6,6",
                    "hex": "#8F0606",
                    "on": "#FFFFFF",
                  },
                  "main": Object {
                    "RGB": "220,16,16",
                    "hex": "#DC1010",
                    "on": "#FFFFFF",
                  },
                },
                "primary": Object {
                  "dark": Object {
                    "RGB": "11,102,54",
                    "hex": "#0B6636",
                    "on": "#FFFFFF",
                  },
                  "light": Object {
                    "RGB": "145,208,62",
                    "hex": "#91D03E",
                    "on": "#FFFFFF",
                  },
                  "main": Object {
                    "RGB": "1,145,68",
                    "hex": "#019144",
                    "on": "#FFFFFF",
                  },
                },
                "secondary": Object {
                  "dark": Object {
                    "RGB": "72,140,155",
                    "hex": "#488C9B",
                    "on": "#FFFFFF",
                  },
                  "light": Object {
                    "RGB": "162,235,252",
                    "hex": "#A2EBFC",
                    "on": "#272727",
                  },
                  "main": Object {
                    "RGB": "118,182,196",
                    "hex": "#76B6C4",
                    "on": "#FFFFFF",
                  },
                },
                "surface": Object {
                  "RGB": "255,255,255",
                  "hex": "#FFFFFF",
                  "on": "#272727",
                },
                "white": Object {
                  "RGB": "255,255,255",
                  "hex": "#FFFFFF",
                  "on": "#272727",
                },
              },
            },
            "editable": true,
            "field": "lastName",
            "filter": true,
            "headerName": "Last Name",
            "sortable": true,
          },
        ]
      }
      columns={
        Array [
          Object {
            "checkboxSelection": true,
            "field": "firstName",
            "filter": true,
            "headerCheckboxSelection": true,
            "headerCheckboxSelectionFilteredOnly": true,
            "headerName": "First Name",
            "sortable": true,
          },
          Object {
            "field": "lastName",
            "filter": true,
            "headerName": "Last Name",
            "sortable": true,
          },
        ]
      }
      displayAddNewButton={false}
      displayDeleteButton={false}
      frameworkComponents={
        Object {
          "actionCellRenderer": [Function],
          "checkboxRenderer": [Function],
          "defaultTextEditor": [Function],
          "selectRenderer": [Function],
          "toggleRenderer": [Function],
          "tooltipHeader": [Function],
        }
      }
      gridOptions={
        Object {
          "getRowStyle": [Function],
        }
      }
      isDisabled={false}
      onGridReady={[Function]}
      onRowDragEnd={[Function]}
      onRowSelected={[Function]}
      rowData={
        Array [
          Object {
            "firstName": "Teddy",
            "key": 1,
            "lastName": "Bear",
          },
          Object {
            "firstName": "Arctic",
            "key": 3,
            "lastName": "Monkeys",
          },
          Object {
            "firstName": "Poney Poney",
            "key": 5,
            "lastName": "Run Run",
          },
          Object {
            "firstName": "Baby",
            "key": 2,
            "lastName": "Shark",
          },
          Object {
            "firstName": "Teddy",
            "hightlighted": "red",
            "lastName": "Bear",
          },
        ]
      }
      rowDragManaged={true}
      rowHeight={40}
      rowSelection="multiple"
      rows={
        Array [
          Object {
            "firstName": "Teddy",
            "key": 1,
            "lastName": "Bear",
          },
          Object {
            "firstName": "Arctic",
            "key": 3,
            "lastName": "Monkeys",
          },
          Object {
            "firstName": "Poney Poney",
            "key": 5,
            "lastName": "Run Run",
          },
          Object {
            "firstName": "Baby",
            "key": 2,
            "lastName": "Shark",
          },
          Object {
            "firstName": "Teddy",
            "hightlighted": "red",
            "lastName": "Bear",
          },
        ]
      }
      suppressDragLeaveHidesColumns={true}
      theme={
        Object {
          "action": Object {
            "dark": Object {
              "RGB": "0,47,108",
              "hex": "#002F6C",
              "on": "#FFFFFF",
            },
            "light": Object {
              "RGB": "98,194,248",
              "hex": "#62C2F8",
              "on": "#FFFFFF",
            },
            "main": Object {
              "RGB": "1,87,155",
              "hex": "#01579B",
              "on": "#FFFFFF",
            },
          },
          "background": Object {
            "RGB": "246,246,246",
            "hex": "#F6F6F6",
          },
          "black": Object {
            "main": Object {
              "RGB": "39,39,39",
              "hex": "#272727",
              "on": "#FFFFFF",
            },
            "tint20": Object {
              "RGB": "236,236,236",
              "hex": "#ECECEC",
              "on": "#272727",
            },
            "tint40": Object {
              "RGB": "199,199,199",
              "hex": "#C7C7C7",
              "on": "#272727",
            },
            "tint60": Object {
              "RGB": "160,160,160",
              "hex": "#A0A0A0",
              "on": "#FFFFFF",
            },
            "tint80": Object {
              "RGB": "105,105,105",
              "hex": "#696969",
              "on": "#FFFFFF",
            },
          },
          "complimentary": Object {
            "dark": Object {
              "RGB": "250,175,64",
              "hex": "#FAAF40",
              "on": "#272727",
            },
            "light": Object {
              "RGB": "249,240,21",
              "hex": "#F9F015",
              "on": "#272727",
            },
            "main": Object {
              "RGB": "253,216,53",
              "hex": "#FDD835",
              "on": "#272727",
            },
          },
          "error": Object {
            "dark": Object {
              "RGB": "143,6,6",
              "hex": "#8F0606",
              "on": "#FFFFFF",
            },
            "main": Object {
              "RGB": "220,16,16",
              "hex": "#DC1010",
              "on": "#FFFFFF",
            },
          },
          "primary": Object {
            "dark": Object {
              "RGB": "11,102,54",
              "hex": "#0B6636",
              "on": "#FFFFFF",
            },
            "light": Object {
              "RGB": "145,208,62",
              "hex": "#91D03E",
              "on": "#FFFFFF",
            },
            "main": Object {
              "RGB": "1,145,68",
              "hex": "#019144",
              "on": "#FFFFFF",
            },
          },
          "secondary": Object {
            "dark": Object {
              "RGB": "72,140,155",
              "hex": "#488C9B",
              "on": "#FFFFFF",
            },
            "light": Object {
              "RGB": "162,235,252",
              "hex": "#A2EBFC",
              "on": "#272727",
            },
            "main": Object {
              "RGB": "118,182,196",
              "hex": "#76B6C4",
              "on": "#FFFFFF",
            },
          },
          "surface": Object {
            "RGB": "255,255,255",
            "hex": "#FFFFFF",
            "on": "#272727",
          },
          "white": Object {
            "RGB": "255,255,255",
            "hex": "#FFFFFF",
            "on": "#272727",
          },
        }
      }
    />
    <Overlay
      isDisabled={false}
      theme={
        Object {
          "action": Object {
            "dark": Object {
              "RGB": "0,47,108",
              "hex": "#002F6C",
              "on": "#FFFFFF",
            },
            "light": Object {
              "RGB": "98,194,248",
              "hex": "#62C2F8",
              "on": "#FFFFFF",
            },
            "main": Object {
              "RGB": "1,87,155",
              "hex": "#01579B",
              "on": "#FFFFFF",
            },
          },
          "background": Object {
            "RGB": "246,246,246",
            "hex": "#F6F6F6",
          },
          "black": Object {
            "main": Object {
              "RGB": "39,39,39",
              "hex": "#272727",
              "on": "#FFFFFF",
            },
            "tint20": Object {
              "RGB": "236,236,236",
              "hex": "#ECECEC",
              "on": "#272727",
            },
            "tint40": Object {
              "RGB": "199,199,199",
              "hex": "#C7C7C7",
              "on": "#272727",
            },
            "tint60": Object {
              "RGB": "160,160,160",
              "hex": "#A0A0A0",
              "on": "#FFFFFF",
            },
            "tint80": Object {
              "RGB": "105,105,105",
              "hex": "#696969",
              "on": "#FFFFFF",
            },
          },
          "complimentary": Object {
            "dark": Object {
              "RGB": "250,175,64",
              "hex": "#FAAF40",
              "on": "#272727",
            },
            "light": Object {
              "RGB": "249,240,21",
              "hex": "#F9F015",
              "on": "#272727",
            },
            "main": Object {
              "RGB": "253,216,53",
              "hex": "#FDD835",
              "on": "#272727",
            },
          },
          "error": Object {
            "dark": Object {
              "RGB": "143,6,6",
              "hex": "#8F0606",
              "on": "#FFFFFF",
            },
            "main": Object {
              "RGB": "220,16,16",
              "hex": "#DC1010",
              "on": "#FFFFFF",
            },
          },
          "primary": Object {
            "dark": Object {
              "RGB": "11,102,54",
              "hex": "#0B6636",
              "on": "#FFFFFF",
            },
            "light": Object {
              "RGB": "145,208,62",
              "hex": "#91D03E",
              "on": "#FFFFFF",
            },
            "main": Object {
              "RGB": "1,145,68",
              "hex": "#019144",
              "on": "#FFFFFF",
            },
          },
          "secondary": Object {
            "dark": Object {
              "RGB": "72,140,155",
              "hex": "#488C9B",
              "on": "#FFFFFF",
            },
            "light": Object {
              "RGB": "162,235,252",
              "hex": "#A2EBFC",
              "on": "#272727",
            },
            "main": Object {
              "RGB": "118,182,196",
              "hex": "#76B6C4",
              "on": "#FFFFFF",
            },
          },
          "surface": Object {
            "RGB": "255,255,255",
            "hex": "#FFFFFF",
            "on": "#272727",
          },
          "white": Object {
            "RGB": "255,255,255",
            "hex": "#FFFFFF",
            "on": "#272727",
          },
        }
      }
    />
  </WIPTable__Container>
</Fragment>
`;
